# parsec

./: .gitignore  AI_PROMPTING_GUIDE.md  COMPLETE_TEST_GUIDE.md  EXTENSION_FIXES.md  PARSEC_LANGUAGE_REFERENCE.md  README.md  README_FIXES.md  WHY_PROBLEMS_FIXED.md  index.html  parsec.config.json  server.js  setup-extension.bat
.github/: copilot-instructions.md
docs/: BACKEND_GUIDE.md  GETTING_STARTED.md  SPEC.md
examples/: README.md  backend-counter.js  backend-todo.js  counter.parsec  todo.parsec
parser/: Cargo.toml  README.md
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
renderer/: README.md  package-lock.json  package.json  tsconfig.json
renderer/src/: App.tsx  ast.ts  index.tsx  render.ts
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json  parsec-vscode-0.1.0.vsix  tsconfig.json
vscode-extension/src/: extension.ts  preview.ts
vscode-extension/syntaxes/: parsec.tmLanguage.json  parsec.tmLanguage.xml
