[package]
name = "parsec-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "parsec_parser"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
